force-app/main/default/objects/Opportunity/fields/Affiliates_to_receive_PO__c.field-meta.xml
<CustomField>
    <fullName>Affiliates_to_receive_PO__c</fullName>
    <label>Affiliates to receive PO</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>KBC-PT</fullName>
            </value>
            <value>
                <fullName>KBC-SG</fullName>
            </value>
            <value>
                <fullName>KBC-US</fullName>
            </value>
            <value>
                <fullName>NKS</fullName>
            </value>
            <value>
                <fullName>PEI</fullName>
            </value>
            <value>
                <fullName>SCA</fullName>
            </value>
            <value>
                <fullName>SSO</fullName>
            </value>
            <value>
                <fullName>SVM-E</fullName>
            </value>
            <value>
                <fullName>YAO</fullName>
            </value>
            <value>
                <fullName>YAU</fullName>
            </value>
            <value>
                <fullName>YCA</fullName>
            </value>
            <value>
                <fullName>YCA-CA</fullName>
            </value>
            <value>
                <fullName>YCA-MX</fullName>
            </value>
            <value>
                <fullName>YCN</fullName>
            </value>
            <value>
                <fullName>YEA</fullName>
            </value>
            <value>
                <fullName>YEA-BRN</fullName>
            </value>
            <value>
                <fullName>YEA-PKT</fullName>
            </value>
            <value>
                <fullName>YEA-RSHQ</fullName>
            </value>
            <value>
                <fullName>YEF</fullName>
            </value>
            <value>
                <fullName>YEF-A</fullName>
            </value>
            <value>
                <fullName>YEF-B</fullName>
            </value>
            <value>
                <fullName>YEF-BG</fullName>
            </value>
            <value>
                <fullName>YEF-CH</fullName>
            </value>
            <value>
                <fullName>YEF-CZ</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>