force-app/main/default/objects/Opportunity/fields/All_Authorization_re_Confirmed__c.field-meta.xml
<CustomField>
    <fullName>All_Authorization_re_Confirmed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>All Authorization re-Confirmed?</label>
    <type>Checkbox</type>
</CustomField>