force-app/main/default/objects/Opportunity/fields/All_Authorizations_Reconfirmed__c.field-meta.xml
<CustomField>
    <fullName>All_Authorizations_Reconfirmed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>All Authorizations Reconfirmed</label>
    <type>Checkbox</type>
</CustomField>