force-app/main/default/objects/Opportunity/fields/Booking_GP__c.field-meta.xml
<CustomField>
    <fullName>Booking_GP__c</fullName>
    <label>Booking GP (%)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>