force-app/main/default/objects/Opportunity/fields/Booking_OI__c.field-meta.xml
<CustomField>
    <fullName>Booking_OI__c</fullName>
    <label>Booking OI</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>