force-app/main/default/objects/Opportunity/fields/Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>Business_Unit__c</fullName>
    <description>Business Unit that is handling this opportunity</description>
    <label>Business Unit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Material SBU</fullName>
            </value>
            <value>
                <fullName>Life SBU</fullName>
            </value>
            <value>
                <fullName>Products HQ</fullName>
            </value>
            <value>
                <fullName>Digital Solutions HQ</fullName>
            </value>
            <value>
                <fullName>YMI SBU</fullName>
            </value>
            <value>
                <fullName>Energy &amp; Sustainable SBU</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>