force-app/main/default/objects/Opportunity/fields/Buying_Influence__c.field-meta.xml
<CustomField>
    <fullName>Buying_Influence__c</fullName>
    <label>Buying Influence</label>
    <length>255</length>
    <type>Text</type>
</CustomField>