force-app/main/default/objects/Opportunity/fields/Category_Authorized__c.field-meta.xml
<CustomField>
    <fullName>Category_Authorized__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Category Authorized</label>
    <type>Checkbox</type>
</CustomField>