force-app/main/default/objects/Opportunity/fields/Category_of_Interest__c.field-meta.xml
<CustomField>
    <fullName>Category_of_Interest__c</fullName>
    <label>Category of Interest</label>
    <type>Picklist</type>
</CustomField>