force-app/main/default/objects/Opportunity/fields/Category_of_Interest_Old__c.field-meta.xml
<CustomField>
    <fullName>Category_of_Interest_Old__c</fullName>
    <label>Category of Interest_Old</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>To be Provided</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>