force-app/main/default/objects/Opportunity/fields/Client_Problem_Need_Sales_Goal__c.field-meta.xml
<CustomField>
    <fullName>Client_Problem_Need_Sales_Goal__c</fullName>
    <label>Client Problem/Need Sales Goal</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>