force-app/main/default/objects/Opportunity/fields/Close_Lost_Reason__c.field-meta.xml
<CustomField>
    <fullName>Close_Lost_Reason__c</fullName>
    <inlineHelpText>If your option is not available, please select the closest option, and add details in the &quot;Lost Reason Details&quot; field.</inlineHelpText>
    <label>Closed Lost Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>StageName</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Technical Requirements</fullName>
            </value>
            <value>
                <fullName>Not meeting Standards</fullName>
            </value>
            <value>
                <fullName>Lacking Functionality</fullName>
            </value>
            <value>
                <fullName>Lead Time/Delivery Time</fullName>
            </value>
            <value>
                <fullName>Existing Installed Base</fullName>
            </value>
            <value>
                <fullName>Local Service</fullName>
            </value>
            <value>
                <fullName>EPC Lost</fullName>
            </value>
            <value>
                <fullName>End User Relationship</fullName>
            </value>
            <value>
                <fullName>Obsolete Product</fullName>
            </value>
            <value>
                <fullName>Country Restrictions (Level 3, 4)</fullName>
            </value>
            <value>
                <fullName>Export Compliance</fullName>
            </value>
            <value>
                <fullName>Commercial/Legal Compliant</fullName>
            </value>
            <value>
                <fullName>Customer Cancelled</fullName>
            </value>
            <value>
                <fullName>Decision not to bid</fullName>
            </value>
            <value>
                <fullName>Lost to Competitor-Price</fullName>
            </value>
            <value>
                <fullName>Duplicate Opportunity</fullName>
            </value>
            <value>
                <fullName>Disqualified</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>