force-app/main/default/objects/Opportunity/fields/Commitment_Received__c.field-meta.xml
<CustomField>
    <fullName>Commitment_Received__c</fullName>
    <label>Commitment Received</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Verbal</fullName>
            </value>
            <value>
                <fullName>Not Yet</fullName>
            </value>
            <value>
                <fullName>Letter of Intent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>