force-app/main/default/objects/Opportunity/fields/Commitment_Received_Date__c.field-meta.xml
<CustomField>
    <fullName>Commitment_Received_Date__c</fullName>
    <label>Commitment Received Date</label>
    <type>Date</type>
</CustomField>