force-app/main/default/objects/Opportunity/fields/Competition_Positioning__c.field-meta.xml
<CustomField>
    <fullName>Competition_Positioning__c</fullName>
    <description>This field will be used to caluculate winning possiblity</description>
    <label>Competition Positioning</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Only Alternative</fullName>
                <label>A = Only Alternative</label>
            </value>
            <value>
                <fullName>Front Runner</fullName>
                <default>true</default>
                <label>B = Front Runner</label>
            </value>
            <value>
                <fullName>Shared</fullName>
                <label>C = Shared</label>
            </value>
            <value>
                <fullName>Zero</fullName>
                <label>D = Zero</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>