force-app/main/default/objects/Opportunity/fields/Competitor_Information__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Information__c</fullName>
    <description>Description / Notes about Competitor.</description>
    <label>Competitor Information</label>
    <length>255</length>
    <type>Text</type>
</CustomField>