force-app/main/default/objects/Opportunity/fields/Contract_Risk_Review_Approval__c.field-meta.xml
<CustomField>
    <fullName>Contract_Risk_Review_Approval__c</fullName>
    <label>Contract Risk Review &amp; Approval</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cat 0</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>