force-app/main/default/objects/Opportunity/fields/Contracting_Entry__c.field-meta.xml
<CustomField>
    <fullName>Contracting_Entry__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contracting Entry ?</label>
    <type>Checkbox</type>
</CustomField>