force-app/main/default/objects/Opportunity/fields/Customer_PO_Received__c.field-meta.xml
<CustomField>
    <fullName>Customer_PO_Received__c</fullName>
    <label>Customer PO Received</label>
    <type>Date</type>
</CustomField>