force-app/main/default/objects/Opportunity/fields/Description_Notes__c.field-meta.xml
<CustomField>
    <fullName>Description_Notes__c</fullName>
    <description>Description notes</description>
    <label>Description Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>