force-app/main/default/objects/Opportunity/fields/End_User__c.field-meta.xml
<CustomField>
    <fullName>End_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User to whom the opportunity will be delivered</description>
    <label>End User</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>