force-app/main/default/objects/Opportunity/fields/End_User_Country__c.field-meta.xml
<CustomField>
    <fullName>End_User_Country__c</fullName>
    <formula>End_User__r.ShippingCountry</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>End User Country</label>
    <type>Text</type>
</CustomField>