force-app/main/default/objects/Opportunity/fields/Estimated_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Close_Date__c</fullName>
    <description>Global One SMS Estimated Close Date. Added  to support reporting</description>
    <label>Estimated Close Date</label>
    <type>Date</type>
</CustomField>