force-app/main/default/objects/Opportunity/fields/Export_Control_Check__c.field-meta.xml
<CustomField>
    <fullName>Export_Control_Check__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Export Control Check</label>
    <type>Checkbox</type>
</CustomField>