force-app/main/default/objects/Opportunity/fields/FID_Approved__c.field-meta.xml
<CustomField>
    <fullName>FID_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>FID Approved</label>
    <type>Checkbox</type>
</CustomField>