force-app/main/default/objects/Opportunity/fields/Finalized_Service_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Finalized_Service_Agreement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Finalized Service Agreement</label>
    <type>Checkbox</type>
</CustomField>