force-app/main/default/objects/Opportunity/fields/Functional_Unit__c.field-meta.xml
<CustomField>
    <fullName>Functional_Unit__c</fullName>
    <inlineHelpText>Comparable to Sales Office in YGS</inlineHelpText>
    <label>Functional Unit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>11B02 - Project Sales</fullName>
            </value>
            <value>
                <fullName>11B03 - PCI</fullName>
            </value>
            <value>
                <fullName>11B04 - VPS</fullName>
            </value>
            <value>
                <fullName>11B06 - Life Cycle Sales</fullName>
            </value>
            <value>
                <fullName>11B08 - GLT Plus</fullName>
            </value>
            <value>
                <fullName>11B09 - GB</fullName>
            </value>
            <value>
                <fullName>11B11 - Intl. Business (YEF-NL)</fullName>
            </value>
            <value>
                <fullName>11B12 - Amnimo</fullName>
            </value>
            <value>
                <fullName>12701 - FU Austria</fullName>
            </value>
            <value>
                <fullName>12801 - Systems</fullName>
            </value>
            <value>
                <fullName>12802 - PCI</fullName>
            </value>
            <value>
                <fullName>12804 - System Service</fullName>
            </value>
            <value>
                <fullName>12902 - Industry Sales</fullName>
            </value>
            <value>
                <fullName>12903 - Field-Sales PCI</fullName>
            </value>
            <value>
                <fullName>12904 - System-service</fullName>
            </value>
            <value>
                <fullName>12905 - PCI-services</fullName>
            </value>
            <value>
                <fullName>12906 - Analytic Sales</fullName>
            </value>
            <value>
                <fullName>12911 - Intl. Business (YEF-G)</fullName>
            </value>
            <value>
                <fullName>12A01 - EPC &amp; Outside EU</fullName>
            </value>
            <value>
                <fullName>12A02 - System sales</fullName>
            </value>
            <value>
                <fullName>12A03 - PCI Sales</fullName>
            </value>
            <value>
                <fullName>12A04 - PCI Sales - Service</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>