force-app/main/default/objects/Opportunity/fields/GMP_Category__c.field-meta.xml
<CustomField>
    <fullName>GMP_Category__c</fullName>
    <description>Identifies the Global Major Project (GMP) Category for this opportunity. If CAT2 or 4, GMP report is necessary. If CAT2, 3, or 4, YHQ Approval (Develop stage) is needed.</description>
    <inlineHelpText>Global One SMS GMP Category. Added to support reporting</inlineHelpText>
    <label>GMP Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CAT0</fullName>
            </value>
            <value>
                <fullName>CAT1</fullName>
            </value>
            <value>
                <fullName>CAT2</fullName>
            </value>
            <value>
                <fullName>CAT3</fullName>
            </value>
            <value>
                <fullName>CAT4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>