force-app/main/default/objects/Opportunity/fields/In_Budget__c.field-meta.xml
<CustomField>
    <fullName>In_Budget__c</fullName>
    <defaultValue>false</defaultValue>
    <label>In Budget</label>
    <type>Checkbox</type>
</CustomField>