force-app/main/default/objects/Opportunity/fields/In_Forecast__c.field-meta.xml
<CustomField>
    <fullName>In_Forecast__c</fullName>
    <defaultValue>true</defaultValue>
    <label>In Forecast</label>
    <type>Checkbox</type>
</CustomField>