force-app/main/default/objects/Opportunity/fields/Industry__c.field-meta.xml
<CustomField>
    <fullName>Industry__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Allows to select an Industry from a large list</description>
    <label>Industry</label>
    <referenceTo>Industry_Code__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>