force-app/main/default/objects/Opportunity/fields/Industry_Code__c.field-meta.xml
<CustomField>
    <fullName>Industry_Code__c</fullName>
    <description>Code from Industry</description>
    <formula>Industry__r.Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Industry Code</label>
    <type>Text</type>
</CustomField>