force-app/main/default/objects/Opportunity/fields/Interest_Area_Product_Business_Line__c.field-meta.xml
<CustomField>
    <fullName>Interest_Area_Product_Business_Line__c</fullName>
    <description>Area or location in which the opportunity is implemented / the project that this opportunity is related to</description>
    <label>Interest Area/Product/Business Line</label>
    <length>255</length>
    <type>Text</type>
</CustomField>