force-app/main/default/objects/Opportunity/fields/Is_Converted_From_Lead__c.field-meta.xml
<CustomField>
    <fullName>Is_Converted_From_Lead__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Converted From Lead</label>
    <type>Checkbox</type>
</CustomField>