force-app/main/default/objects/Opportunity/fields/Lead_Category_of_Interest__c.field-meta.xml
<CustomField>
    <fullName>Lead_Category_of_Interest__c</fullName>
    <inlineHelpText>Reflects the category selected in the webform registration</inlineHelpText>
    <label>Lead Category of Interest</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Category_of_Interest</valueSetName>
    </valueSet>
</CustomField>