force-app/main/default/objects/Opportunity/fields/Lead_Product_of_Interest__c.field-meta.xml
<CustomField>
    <fullName>Lead_Product_of_Interest__c</fullName>
    <label>Lead Product of Interest</label>
    <length>255</length>
    <type>Text</type>
</CustomField>