force-app/main/default/objects/Opportunity/fields/LOI_Received__c.field-meta.xml
<CustomField>
    <fullName>LOI_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <label>LOI Received ?</label>
    <type>Checkbox</type>
</CustomField>