force-app/main/default/objects/Opportunity/fields/Non_standard_Products_Approved__c.field-meta.xml
<CustomField>
    <fullName>Non_standard_Products_Approved__c</fullName>
    <label>Non-standard Products Approved?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Applicable</fullName>
                <default>true</default>
                <label>Not Applicable</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>