force-app/main/default/objects/Opportunity/fields/Nuclear_Industry_Compliant__c.field-meta.xml
<CustomField>
    <fullName>Nuclear_Industry_Compliant__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Nuclear Industry Check (GMS-300-03) 9 (We cannot supply to critical nuclear applications)</description>
    <label>Nuclear Industry Compliant</label>
    <type>Checkbox</type>
</CustomField>