force-app/main/default/objects/Opportunity/fields/OneSMS_Opportunity_Number__c.field-meta.xml
<CustomField>
    <fullName>OneSMS_Opportunity_Number__c</fullName>
    <description>Global One SMS Opportunity Number. Added to support reporting</description>
    <label>OneSMS Opportunity Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>