force-app/main/default/objects/Opportunity/fields/Opportunity_Product_Count__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Product_Count__c</fullName>
    <description>Rollup Summary of all related Opportunity Products</description>
    <label>Opportunity Product Count</label>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>