force-app/main/default/objects/Opportunity/fields/Opportunity_Source_Lead_Source__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Source_Lead_Source__c</fullName>
    <label>Opportunity Source (Lead Source)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Advertisement</fullName>
            </value>
            <value>
                <fullName>Customer Event</fullName>
            </value>
            <value>
                <fullName>Employee Referral</fullName>
            </value>
            <value>
                <fullName>Google AdWords</fullName>
            </value>
            <value>
                <fullName>Other Partner</fullName>
            </value>
            <value>
                <fullName>Purchased List</fullName>
            </value>
            <value>
                <fullName>Trade Show</fullName>
            </value>
            <value>
                <fullName>Webinar Website</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>