force-app/main/default/objects/Opportunity/fields/Oppportunity_Id__c.field-meta.xml
<CustomField>
    <fullName>Oppportunity_Id__c</fullName>
    <description>Custom Field {00000000}</description>
    <displayFormat>{00000000}</displayFormat>
    <label>Opportunity Id</label>
    <type>AutoNumber</type>
</CustomField>