force-app/main/default/objects/Opportunity/fields/Order_Entry_Approved__c.field-meta.xml
<CustomField>
    <fullName>Order_Entry_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Accepted by delivery</description>
    <label>Order Entry Approved</label>
    <type>Checkbox</type>
</CustomField>