force-app/main/default/objects/Opportunity/fields/Order_Entry_Date__c.field-meta.xml
<CustomField>
    <fullName>Order_Entry_Date__c</fullName>
    <label>Order Entry Date</label>
    <type>Date</type>
</CustomField>