force-app/main/default/objects/Opportunity/fields/Parent_Opportunity_Program__c.field-meta.xml
<CustomField>
    <fullName>Parent_Opportunity_Program__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Name of the Parent Opportunity, Mostly used for EPC related Opty</description>
    <label>Parent Opportunity (Program)</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>