force-app/main/default/objects/Opportunity/fields/Payment_Milestones__c.field-meta.xml
<CustomField>
    <fullName>Payment_Milestones__c</fullName>
    <description>Identify, what is the next payment milestone</description>
    <label>Payment Milestones</label>
    <length>255</length>
    <type>Text</type>
</CustomField>