force-app/main/default/objects/Opportunity/fields/PO_Approved__c.field-meta.xml
<CustomField>
    <fullName>PO_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PO Approved ?</label>
    <type>Checkbox</type>
</CustomField>