force-app/main/default/objects/Opportunity/fields/Project_Probability__c.field-meta.xml
<CustomField>
    <fullName>Project_Probability__c</fullName>
    <description>Global One SMS Project Probability. Added to support reporting</description>
    <label>Project Probability</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>