force-app/main/default/objects/Opportunity/fields/Project_Scope__c.field-meta.xml
<CustomField>
    <fullName>Project_Scope__c</fullName>
    <description>Identify the actual scope of the Opty</description>
    <label>Project Scope</label>
    <type>TextArea</type>
</CustomField>