force-app/main/default/objects/Opportunity/fields/Project_Type__c.field-meta.xml
<CustomField>
    <fullName>Project_Type__c</fullName>
    <label>Project Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Expansion</fullName>
            </value>
            <value>
                <fullName>Grassroot</fullName>
            </value>
            <value>
                <fullName>Migration</fullName>
            </value>
            <value>
                <fullName>Replacement</fullName>
            </value>
            <value>
                <fullName>Service (Advanced / Improvement)</fullName>
            </value>
            <value>
                <fullName>Service (Conventional)</fullName>
            </value>
            <value>
                <fullName>Upgrade</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>