force-app/main/default/objects/Opportunity/fields/Proposal_price_Authorized__c.field-meta.xml
<CustomField>
    <fullName>Proposal_price_Authorized__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Proposal price Authorized</label>
    <type>Checkbox</type>
</CustomField>