force-app/main/default/objects/Opportunity/fields/Quotation_Issued__c.field-meta.xml
<CustomField>
    <fullName>Quotation_Issued__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Quotation Issued ?</label>
    <type>Checkbox</type>
</CustomField>