force-app/main/default/objects/Opportunity/fields/Quotation_Number__c.field-meta.xml
<CustomField>
    <fullName>Quotation_Number__c</fullName>
    <label>Quotation Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>