force-app/main/default/objects/Opportunity/fields/Received_RFQ__c.field-meta.xml
<CustomField>
    <fullName>Received_RFQ__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Received RFQ</label>
    <type>Checkbox</type>
</CustomField>