force-app/main/default/objects/Opportunity/fields/Regulatory_Approved__c.field-meta.xml
<CustomField>
    <fullName>Regulatory_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Regulatory Approved?</label>
    <type>Checkbox</type>
</CustomField>