force-app/main/default/objects/Opportunity/fields/Related_Document_URL__c.field-meta.xml
<CustomField>
    <fullName>Related_Document_URL__c</fullName>
    <label>Related Document URL</label>
    <type>Url</type>
</CustomField>