force-app/main/default/objects/Opportunity/fields/RFQ_Received_Date__c.field-meta.xml
<CustomField>
    <fullName>RFQ_Received_Date__c</fullName>
    <label>RFQ Received Date</label>
    <type>Date</type>
</CustomField>