force-app/main/default/objects/Opportunity/fields/Roll_up__c.field-meta.xml
<CustomField>
    <fullName>Roll_up__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Roll up</label>
    <type>Checkbox</type>
</CustomField>