force-app/main/default/objects/Opportunity/fields/Sales_Partner__c.field-meta.xml
<CustomField>
    <fullName>Sales_Partner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Will show the Sales Representative or Channel Partner for the Opportunity.</description>
    <label>Sales Partner</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities (Sales Partner)</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>