force-app/main/default/objects/Opportunity/fields/Sequence_of_Events__c.field-meta.xml
<CustomField>
    <fullName>Sequence_of_Events__c</fullName>
    <description>Sequence of events to contract clarified and understood</description>
    <label>Sequence of Events</label>
    <type>TextArea</type>
</CustomField>