force-app/main/default/objects/Opportunity/fields/Shipping_Method__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Method__c</fullName>
    <description>Method of shipping</description>
    <label>Shipping Method</label>
    <length>255</length>
    <type>Text</type>
</CustomField>