force-app/main/default/objects/Opportunity/fields/SSTP_Number__c.field-meta.xml
<CustomField>
    <fullName>SSTP_Number__c</fullName>
    <description>SSTP number provided by YHQ for discount approval</description>
    <inlineHelpText>SSTP number provided by YHQ for discount approval</inlineHelpText>
    <label>SSTP Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>